[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=2",
]

[project]
name = "jason-json"
version = "1.0.0"
description = "Jason (https://jason.co.jp) JSON Builder"
readme = "README.md"
keywords = [
  "japanese",
  "jason",
  "json",
  "scraping",
]
license = { text = "MIT" }
authors = [
  { name = "eggplants", email = "w10776e8w@yahoo.co.jp" },
]
requires-python = ">=3.10,<4"
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "beautifulsoup4>=4.12.3,<5",
  "lxml>=5.3,<6",
  "typed-argument-parser>=1.10.1,<2",
  "types-beautifulsoup4>=4.12.0.20241020,<5",
]
urls.repository = "https://github.com/eggplants/jason-json"
scripts."jason-json" = "jason_json.main:main"
scripts."jason.json" = "jason_json.main:main"

[tool.poetry]
requires-poetry = ">=2.0"
packages = [
  { include = "jason_json" },
]

[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
pre-commit = ">=2.20,<5.0"
taskipy = "^1.10.3"
pytest = "^8.0.0"
pytest-cov = ">=4.1,<7.0"

[tool.poetry.requires-plugins]
poetry-plugin-shell = ">=1.0"

[tool.black]
line-length = 120
target-version = [
  'py310',
]

[tool.ruff]
line-length = 120

lint.select = [
  "ALL",
]
lint.ignore = [
  "D203",
  "D213",
]
lint.per-file-ignores."tests/test_*.py" = [
  "INP001", #  Add an `__init__.py`.
  "S101",   #    Use of assert detected
]
lint.allowed-confusables = [ "～" ]
lint.mccabe.max-complexity = 18
lint.pydocstyle.convention = "numpy"

[tool.mypy]
pretty = true
python_version = "3.10"
show_error_codes = true
strict = true

[tool.taskipy.tasks]
test = "pytest --cov=jason_json --cov-report=term"
"test:ci" = "task test --cov-report=xml:cov.xml"
lint = "pre-commit run -a"
profile = "python -m cProfile"
